VFS-2501 Removed nodejs from packages requirements and port 7443

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -41,7 +41,6 @@
     "FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR\n"
     "OTHER DEALINGS IN THE SOFTWARE."}.
 {rpm_requires,
-    ", nodejs >= 4.4.0"
     ", openssl"}.
 {rpm_build_requires,
     ", automake"
@@ -63,15 +62,13 @@
     ", libsodium-devel"
     ", libtool"
     ", ninja-build"
-    ", nodejs >= 4.4.0"
     ", openssl"
     ", python"
     ", wget"}.
 {rpm_build,
     "export PATH=$PATH:$RPM_BUILD_DIR/node/bin"}.
 {deb_depends,
-    "nodejs (>= 4.4.0)"
-    ", openssl"}.
+    "openssl"}.
 {deb_build_depends,
     "automake"
     ", bc"
@@ -87,7 +84,6 @@
     ", libsodium-dev"
     ", libtool"
     ", ninja-build"
-    ", nodejs (>= 4.4.0)"
     ", openssl"
     ", pkg-config"
     ", python"
