--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -80,7 +80,7 @@
         {dev_mode, false},
 
         % Ports used by application
-        {application_ports, [53, 80, 443, 7443]},
+        {application_ports, [53, 80, 443]},
 
         %% Also used as the certificate domain and to provider CRLs.
         {http_domain, "127.0.0.1"},
