VFS-3793 Update app.config and deps

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -64,13 +64,12 @@
         {couchbase_changes_stream_batch_size, 3},
         {couchbase_changes_stream_update_interval, 1000},
 
-        {datastore_cache_size, [
-            {memory, 200000},
-            {disc, 500000}
-        ]},
+        %% ===================================================================
+        %% Logs
+        %% ===================================================================
 
-        {throttling_delay_db_queue_size, 20000},
-        {throttling_db_queue_limit, 150000}
+        {monitoring_log_file, "{{platform_log_dir}}/node_manager_monitoring.log"},
+        {throttling_log_file, "{{platform_log_dir}}/throttling_monitoring.log"}
     ]},
 
     %% oz_worker config
