VFS-3909 Added exometer

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -69,7 +69,13 @@
         %% ===================================================================
 
         {monitoring_log_file, "{{platform_log_dir}}/node_manager_monitoring.log"},
-        {throttling_log_file, "{{platform_log_dir}}/throttling_monitoring.log"}
+        {throttling_log_file, "{{platform_log_dir}}/throttling_monitoring.log"},
+
+        %% ===================================================================
+        %% Exometer
+        %% ===================================================================
+
+        {counter_name_prefixes, [comp, oz_worker]}
     ]},
 
     %% oz_worker config
@@ -95,7 +101,6 @@
         {covered_dirs, []},
         %% List of modules to be excluded during cover analysis
         {covered_excluded_modules, []},
-
 
         %% ===================================================================
         %% Server certificates
