VFS-3930 Created ports section

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -84,9 +84,6 @@
         % with functionalities used in tests.
         {dev_mode, false},
 
-        % Ports used by application
-        {application_ports, [53, 80, 443]},
-
         %% Also used as the certificate domain and to provider CRLs.
         {http_domain, "127.0.0.1"},
 
@@ -97,7 +94,10 @@
         {oz_name, "unnamed"},
         {admin_emails, ["info@onedata.org"]},
 
-        %% List of beam directories to be covered, cover is not started if list is empty
+        %% ===================================================================
+        %% PORTS
+        %% ===================================================================
+        {gui_port, 443},
 
         %% ===================================================================
         %% Server certificates
@@ -131,7 +131,6 @@
         {max_provider_macaroon_ttl, 3600}, % 1 hour
 
         %% GUI config
-        {gui_port, 443},
         {gui_https_acceptors, 100},
         {gui_socket_timeout, 60000},
         {gui_max_keepalive, 30},
