--- a/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
+++ b/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
@@ -33,24 +33,24 @@ rest_mocks() ->
                     % user with id user1Id, credentials user1:password1
                     % and role 'user1Role'
                     {<<"GET">>, <<"user1">>, <<"password1">>} ->
-                        ResponseBody = json_utils:encode([
-                            {<<"userId">>, <<"user1Id">>},
-                            {<<"userRole">>, <<"user1Role">>}
-                        ]),
+                        ResponseBody = json_utils:encode(#{
+                            <<"userId">> => <<"user1Id">>,
+                            <<"userRole">> => <<"user1Role">>
+                        }),
                         {#rest_response{code = 200, body = ResponseBody,
                             content_type = <<"application/json">>}, State};
                     % user with id user2Id, credentials user2:password2
                     % and role 'user2Role'
                     {<<"GET">>, <<"user2">>, <<"password2">>} ->
-                        ResponseBody = json_utils:encode([
-                            {<<"userId">>, <<"user2Id">>},
-                            {<<"userRole">>, <<"user2Role">>}
-                        ]),
+                        ResponseBody = json_utils:encode(#{
+                            <<"userId">> => <<"user2Id">>,
+                            <<"userRole">> => <<"user2Role">>
+                        }),
                         {#rest_response{code = 200, body = ResponseBody,
                             content_type = <<"application/json">>}, State};
                     % Change password endpoint, working for user 3
                     {<<"PATCH">>, <<"user3">>, <<"password3">>} ->
-                        BodyMap = json_utils:decode_map(ReqBody),
+                        BodyMap = json_utils:decode(ReqBody),
                         OldPassword = maps:get(<<"currentPassword">>, BodyMap, undefined),
                         NewPassword = maps:get(<<"newPassword">>, BodyMap, undefined),
                         case {OldPassword, NewPassword} of
