--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -84,6 +84,11 @@
         % with functionalities used in tests.
         {dev_mode, false},
 
+        % Build version in form:
+        % <number of commits since last tag>-g<last commit hash abbrev>
+        % e.g. 19-g0d0fd5b
+        {build_version, "{{{build_version}}}"},
+
         %% Also used as the certificate domain and to provider CRLs.
         {http_domain, "127.0.0.1"},
 
