--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -118,9 +118,13 @@
         %% The CA cert to sign auto generated test web certs. The file must
         %% contain both the key and cert.
         {test_web_cert_ca_path, "{{platform_etc_dir}}/cacerts/OneDataTestWebServerCa.pem"},
-        {cacerts_dir, "{{platform_etc_dir}}/cacerts"},
         {web_key_file, "{{platform_etc_dir}}/certs/web_key.pem"},
         {web_cert_file, "{{platform_etc_dir}}/certs/web_cert.pem"},
+        %% Path to certificate chain file used by web server
+        {web_cert_chain_file, "{{platform_etc_dir}}/certs/web_chain.pem"},
+
+        %% Path to directory with trusted CA certificates
+        {cacerts_dir, "{{platform_etc_dir}}/cacerts"},
 
         %% Prefix to the REST API - all paths must begin with it.
         %% Must begin with slash
