VFS-3978 Do not distribute test CA with oz-worker

--- a/rebar.config
+++ b/rebar.config
@@ -133,8 +133,10 @@
         {mkdir, "etc"},
         {template, "rel/files/app.config", "etc/app.config"},
         {template, "rel/files/vm.args", "etc/vm.args"},
-        {copy, "certs", "./etc/"},
-        {copy, "cacerts", "./etc/"},
+
+        %% Copy cert dirs
+        {copy, "rel/files/certs", "etc/"},
+        {copy, "rel/files/cacerts", "etc/"},
 
         %% Copy additional data files
         {copy, "rel/data/", "./"},
