--- a/rel/data/saml.config
+++ b/rel/data/saml.config
@@ -6,8 +6,8 @@
 #{
     sp_config => #{
         entity_id => "https://onedata.org/sp",
-        cert_file => "./etc/certs/saml_cert.pem",
-        key_file => "./etc/certs/saml_key.pem",
+        cert_file => "/etc/oz_worker/certs/saml_cert.pem",
+        key_file => "/etc/oz_worker/certs/saml_key.pem",
         organization_name => "Onedata",
         organization_display_name => "Onedata",
         tech_contact_name => "John Doe",
