--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -108,17 +108,12 @@
         %% Server certificates
         %% ===================================================================
 
-        %% If enabled and there is no web key/cert under expected paths
-        %% (web_key_file, web_cert_file) during startup, a new web cert will be
-        %% generated with CN matching onezone domain and signed by CA cert
-        %% found under test_web_cert_ca_path.
-        %% This functionality is devised for test purposes and should not be
-        %% used in production.
-        {generate_web_cert_if_absent, true},
-        %% The CA cert to sign auto generated test web certs. The file must
-        %% contain both the key and cert.
-        {test_web_cert_ca_path, "{{platform_etc_dir}}/cacerts/OneDataTestWebServerCa.pem"},
+        %% NOTE: below envs are overwritten by onepanel during deployment. You
+        %% should always use onepanel to manage web certs, unless you really
+        %% know what you are doing.
+        %% Path to private key used by web server
         {web_key_file, "{{platform_etc_dir}}/certs/web_key.pem"},
+        %% Path to certificate used by web server
         {web_cert_file, "{{platform_etc_dir}}/certs/web_cert.pem"},
         %% Path to certificate chain file used by web server
         {web_cert_chain_file, "{{platform_etc_dir}}/certs/web_chain.pem"},
