VFS-3920 Set gui_docs_proxy_enabled by default to false

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -159,7 +159,7 @@
 
         %% Decides if docs proxy shall be used. Related envs are used only
         %% when true.
-        {gui_docs_proxy_enabled, true},
+        {gui_docs_proxy_enabled, false},
         %% Root path of all documentation-related static files. They are served
         %% by following a HTTP request to a third-party server with static
         %% files (the response is followed back to the client).
