VFS-4095 add cache for user info fetched from onepanel

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -171,6 +171,10 @@
         %% DB config
         {db_nodes, ['db@127.0.0.1']},
 
+        %% Timeout after which to invalidate
+        %% basic auth cache record for given user
+        {basic_auth_cache_expiration_timeout, 5000},
+
         %% ===================================================================
         %% Graph Sync config
         %% ===================================================================
