VFS-4054 Rely on cluster worker to store external IP

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -47,6 +47,9 @@
     %% cluster_worker config
     {cluster_worker, [
 
+        %% External IP of this node - used by DNS
+        {external_ip, {127, 0, 0, 1}},
+
         %% ===================================================================
         %% PLUGINS
         %% ===================================================================
@@ -94,9 +97,6 @@
 
         %% Also used as the certificate domain and to provider CRLs.
         {http_domain, "127.0.0.1"},
-
-        %% External IP of this node - used by load balancing (for DNS)
-        {external_ip, "127.0.0.1"},
 
         % Name of OZ instance
         {oz_name, "unnamed"},
