--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -48,7 +48,10 @@
     {cluster_worker, [
 
         %% External IP of this node - used by DNS
-        {external_ip, {127, 0, 0, 1}},
+        %% can be set to a tuple or string, for example:
+        %% {external_ip, {10,0,0,1}}, or:
+        %% {external_ip, "10.0.0.1"},
+        {external_ip, undefined},
 
         %% ===================================================================
         %% PLUGINS
