VFS-4172 add configuration endpoint
* configuration endpoint
* subdomainDelegationEnabled app.config flag

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -89,6 +89,9 @@
         % e.g. 19-g0d0fd5b
         {build_version, "{{{build_version}}}"},
 
+        %% Flag indicating whether to allow subdomain delegation or not.
+        {subdomain_delegation_enabled, true},
+
         %% Also used as the certificate domain and to provider CRLs.
         {http_domain, "127.0.0.1"},
 
