VFS-4096 add optional enforcement of tokens when registering providers

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -98,6 +98,11 @@
         %% Flag indicating whether to allow subdomain delegation or not.
         {subdomain_delegation_enabled, true},
 
+        %% Flag indicating policy enforced during provider registration:
+        %%  open - default, doesn't require anything
+        %%  strict - require additional invite token
+        {provider_registration_policy, open},
+
         %% Also used as the certificate domain and to provider CRLs.
         {http_domain, "127.0.0.1"},
 
