VFS-3744 Update tests for static dns records

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -197,7 +197,8 @@
             % {static_a_records, [
             %     {<<"example-subdomain">>, [{10,0,0,1}, {10,0,0,2}]}
             % ]}
-            {static_a_records, []},
+            {static_a_records, [
+            ]},
 
             % Static ns entries. Each tuple should contain a subdomain name
             % and a list of nameserver domains.
