VFS-4213 Move saml and auth configs to /etc from /var/lib

--- a/rebar.config
+++ b/rebar.config
@@ -134,6 +134,8 @@
         {mkdir, "etc"},
         {template, "rel/files/app.config", "etc/app.config"},
         {template, "rel/files/vm.args", "etc/vm.args"},
+        {template, "rel/files/auth.config", "etc/auth.config"},
+        {template, "rel/files/saml.config", "etc/saml.config"},
 
         %% Copy cert dirs
         {copy, "rel/files/certs", "etc/"},
