--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -145,8 +145,8 @@
         {gui_socket_timeout, 60000},
         {gui_max_keepalive, 30},
         {gui_cookie_ttl_seconds, 3600}, % one hour
-        {auth_config_file, "{{platform_data_dir}}/auth.config"},
-        {saml_config_file, "{{platform_data_dir}}/saml.config"},
+        {auth_config_file, "{{platform_etc_dir}}/auth.config"},
+        {saml_config_file, "{{platform_etc_dir}}/saml.config"},
         % After this time, login procedure via OIDC/SAML expires (if not completed)
         {state_token_ttl_secs, 300},
         %% List of HTTP headers that will be send with every response.
