VFS-3744 Do not treat TXT records as reserved subdomain

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -186,19 +186,16 @@
             %% All record names specified below should only contain the subdomain
             %% part which will be concatenated to the onezone domain.
             %% Subdomain can be left blank (<<>>) to create records
-            %% forthe onezone domain itself.
+            %% for the onezone domain itself.
 
-            % Static mappings from a subdomain to list of ips.
+            % Static a entries.
             % The subdomain must be a binary and must not begin with the dot character.
-            % Full domain name should be specified, although domains
-            % outside of the onezone domain dns zone probably will not
-            % be resolved properly.
+            % IPs should be given as a list of tuples
             % Example:
             % {static_a_records, [
             %     {<<"example-subdomain">>, [{10,0,0,1}, {10,0,0,2}]}
             % ]}
-            {static_a_records, [
-            ]},
+            {static_a_records, []},
 
             % Static ns entries. Each tuple should contain a subdomain name
             % and a list of nameserver domains.
@@ -231,7 +228,7 @@
             % contain the name (alias, realtive to onezone domain) and domain it should point to.
             % Example:
             % {static_cname_records, [
-            %     {<<"wwww">>, <<"onezone.org">>}
+            %     {<<"www">>, <<"onezone.org">>}
             % ]}
             {static_cname_records, []},
 
