VFS-3715 solve pr tasks

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -98,9 +98,10 @@
         %% Flag indicating whether to allow subdomain delegation or not.
         {subdomain_delegation_enabled, true},
 
-        %% Flag indicating policy enforced during provider registration:
-        %%  open - default, doesn't require anything
-        %%  strict - require additional invite token
+        %% Indicates policy enforced during provider registration:
+        %%  open - anyone can register with no restrictions (default)
+        %%  restricted - requires a provider registration token,
+        %%               which can be issued only by a Onezone admin
         {provider_registration_policy, open},
 
         %% Also used as the certificate domain and to provider CRLs.
