VFS-4171 Add folly and libcouchbase libevent plugin deps

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -41,6 +41,8 @@
     "FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR\n"
     "OTHER DEALINGS IN THE SOFTWARE."}.
 {rpm_requires,
+    "folly"
+    ", libcouchbase2-libevent"
     ", openssl"}.
 {rpm_build_requires,
     ", automake"
@@ -55,6 +57,7 @@
     ", erlang-reltool >= 18.0"
     ", erlang-xmerl >= 18.0"
     ", erlang-os_mon >= 18.0"
+    ", folly-dev"
     ", gcc-c++ >= 4.9.0"
     ", git"
     ", golang"
@@ -68,13 +71,16 @@
 {rpm_build,
     "export PATH=$PATH:$RPM_BUILD_DIR/node/bin"}.
 {deb_depends,
-    "openssl"}.
+    "folly"
+    ", libcouchbase2-libevent"
+    ", openssl"}.
 {deb_build_depends,
     "automake"
     ", bc"
     ", cmake (>= 3.0.0)"
     ", erlang (>= 18.0)"
     ", erlang-src (>= 18.0)"
+    ", folly-dev"
     ", g++ (>= 4.9.0)"
     ", git"
     ", golang-go"
