VFS-4171 Fixed oz-worker CentOS deps

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -57,7 +57,7 @@
     ", erlang-reltool >= 18.0"
     ", erlang-xmerl >= 18.0"
     ", erlang-os_mon >= 18.0"
-    ", folly-dev"
+    ", folly-devel"
     ", gcc-c++ >= 4.9.0"
     ", git"
     ", golang"
