VFS-4267 Adjust code to erl 20, update deps

--- a/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
+++ b/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
@@ -23,12 +23,12 @@ rest_mocks() ->
     [
         % Mock user endpoint, as if there were some users in onepanel.
         #rest_mock{port = 9443, path = <<"/api/v3/onepanel/users/:user">>,
-            response = fun(Req, State) ->
+            response = fun(Req, ReqBody, State) ->
                 <<"Basic ", UserAndPassword/binary>> =
                     req:header(<<"authorization">>, Req),
                 [User, Passwd] =
                     binary:split(base64:decode(UserAndPassword), <<":">>),
-                {Method, _} = cowboy_req:method(Req),
+                Method = cowboy_req:method(Req),
                 case {Method, User, Passwd} of
                     % user with id user1Id, credentials user1:password1
                     % and role 'user1Role'
@@ -50,8 +50,7 @@ rest_mocks() ->
                             content_type = <<"application/json">>}, State};
                     % Change password endpoint, working for user 3
                     {<<"PATCH">>, <<"user3">>, <<"password3">>} ->
-                        BodyMap = json_utils:decode_map(req:body(Req)),
-                        io:format("AA: ~p", [BodyMap]),
+                        BodyMap = json_utils:decode_map(ReqBody),
                         OldPassword = maps:get(<<"currentPassword">>, BodyMap, undefined),
                         NewPassword = maps:get(<<"newPassword">>, BodyMap, undefined),
                         case {OldPassword, NewPassword} of
