VFS-4296 Fixed meck entry

--- a/rebar.config
+++ b/rebar.config
@@ -25,7 +25,7 @@
     {cluster_worker, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref, "d8d3242435"}}},
     {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "137e65d992"}}}},
     {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "ba8292ff867"}}},
-    {meck, {git, "https://github.com/eproxus/meck.git", {tag, "36b208e2d4"}}},
+    {meck, {git, "https://github.com/eproxus/meck.git", {ref, "36b208e2d4"}}},
     {parse_trans, {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
     {esaml, {git, "https://github.com/onedata/esaml.git", {ref, "d3019cee08"}}},
     {erldns, {git, "https://github.com/aetrion/erl-dns.git", {ref, "24998cd"}}},
