VFS-4267 Updated package dependencies for cberl

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -47,7 +47,11 @@
 {rpm_build_requires,
     ", automake"
     ", bc"
+    ", binutils-devel"
+    ", boost-devel >= 1.58.0"
     ", cmake >= 3.0.0"
+    ", double-conversion-devel"
+    ", double-conversion-static"
     ", erlang-common_test >= 18.0"
     ", erlang-edoc >= 18.0"
     ", erlang-erl_interface >= 18.0"
@@ -57,9 +61,12 @@
     ", erlang-reltool >= 18.0"
     ", erlang-xmerl >= 18.0"
     ", erlang-os_mon >= 18.0"
-    ", folly-devel"
+    ", folly-devel = 2017.10.02.00"
+    ", folly-static = 2017.10.02.00"
     ", gcc-c++ >= 4.9.0"
     ", git"
+    ", gflags-devel"
+    ", glog-devel >= 0.3.4"
     ", golang"
     ", libcouchbase-devel"
     ", libsodium-devel"
@@ -80,11 +87,14 @@
     ", cmake (>= 3.0.0)"
     ", erlang (>= 20.0)"
     ", erlang-src (>= 20.0)"
-    ", folly-dev"
+    ", folly-dev (>= 2017.10.02.00)"
     ", g++ (>= 4.9.0)"
     ", git"
     ", golang-go"
     ", libcouchbase-dev"
+    ", libdouble-conversion-dev"
+    ", libgoogle-glog-dev (>= 0.3.4)"
+    ", libiberty-dev"
     ", libprotobuf-dev (>= 2.6.0)"
     ", libprotoc-dev (>= 2.6.0)"
     ", libsodium-dev"
