VFS-4272 Check forward compatiblity during OP connections to OZ

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -95,6 +95,16 @@
         % e.g. 19-g0d0fd5b
         {build_version, "{{{build_version}}}"},
 
+        % Compatible versions of Oneprovider, this is advertised so that
+        % Oneprovider instances can check their compatibility.
+        {compatible_op_versions, [
+            "18.02.0-beta1",
+            "18.02.0-beta2",
+            "18.02.0-beta3",
+            "18.02.0-beta4",
+            "18.02.0-beta5"
+        ]},
+
         %% Flag indicating whether to allow subdomain delegation or not.
         {subdomain_delegation_enabled, true},
 
