--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -102,7 +102,8 @@
             "18.02.0-beta2",
             "18.02.0-beta3",
             "18.02.0-beta4",
-            "18.02.0-beta5"
+            "18.02.0-beta5",
+            "18.02.0-beta6"
         ]},
 
         %% Flag indicating whether to allow subdomain delegation or not.
