--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -103,7 +103,8 @@
             "18.02.0-beta3",
             "18.02.0-beta4",
             "18.02.0-beta5",
-            "18.02.0-beta6"
+            "18.02.0-beta6",
+            "18.02.0-rc1"
         ]},
 
         %% Flag indicating whether to allow subdomain delegation or not.
