VFS-4446 Updated jiffy ref

--- a/rebar.config
+++ b/rebar.config
@@ -26,6 +26,7 @@
     {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "ce525bfd7ac"}}}},
     {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "b8f1120728e"}}},
     {meck, {git, "https://github.com/eproxus/meck.git", {ref, "36b208e2d4"}}},
+    {jiffy, {git, "https://github.com/bkryza/jiffy.git", {ref, "a449ec1ecd7b5"}}},
     {parse_trans, {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
     {esaml, {git, "https://github.com/onedata/esaml.git", {ref, "da56394d06"}}},
     {erldns, {git, "https://github.com/aetrion/erl-dns.git", {ref, "24998cd"}}},
