--- a/rebar.config
+++ b/rebar.config
@@ -21,17 +21,13 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "./test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "c24f69b0025"}}},
-    {cluster_worker, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref,"99fbdf878f4"}}},
-    {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "ce525bfd7ac"}}}},
+    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "ba5aa76944"}}},
+    {cluster_worker, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref,"6bc20692e0"}}},
+    {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "939176e5a7"}}}},
     {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "b8f1120728e"}}},
-    {meck, {git, "https://github.com/eproxus/meck.git", {ref, "36b208e2d4"}}},
-    {jiffy, {git, "https://github.com/bkryza/jiffy.git", {ref, "a449ec1ecd7b5"}}},
-    {parse_trans, {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
     {esaml, {git, "https://github.com/onedata/esaml.git", {ref, "da56394d06"}}},
     {erldns, {git, "https://github.com/aetrion/erl-dns.git", {ref, "24998cd"}}},
-    {observer_cli, "1.0.7"},
-    {cowboy, {git, "git://github.com/ninenines/cowboy.git", {tag, "2.2.2"}}}
+    {observer_cli, "1.0.7"}
 ]}.
 
 %% plugins
