--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -120,19 +120,12 @@
         % Compatible versions of Oneprovider, this is advertised so that
         % Oneprovider instances can check their compatibility.
         {compatible_op_versions, [
-            "18.02.0-beta1",
-            "18.02.0-beta2",
-            "18.02.0-beta3",
-            "18.02.0-beta4",
-            "18.02.0-beta5",
-            "18.02.0-beta6",
-            "18.02.0-rc1",
-            "18.02.0-rc2",
-            "18.02.0-rc3",
-            "18.02.0-rc4",
-            "18.02.0-rc5",
-            "18.02.0-rc6",
-            "18.02.0-rc7"
+            % @TODO NOTE during the next release: since 18.02.0-rc8, op-worker
+            % is prepared for the change of group and space privileges that was
+            % introduced. No previous op-worker version can be used with this
+            % Onezone, or the groups tab in op-worker GUI will crash.
+            "18.02.0-rc8",
+            "18.07.0-alpha"
         ]},
 
         %% Flag indicating whether to allow subdomain delegation or not.
