VFS-2672 Rework GUI session handling

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -217,9 +217,6 @@
         %% GUI config
         %% ===================================================================
 
-        % Session TTL (in seconds)
-        {session_ttl, 3600},
-
         %% Directory where static files of default, embedded GUI are kept.
         %% Used when gui_custom_static_root is non-existent or empty.
         {gui_default_static_root, "{{platform_data_dir}}/gui_static"},
@@ -291,7 +288,7 @@
             {static_mx_records, []},
 
             % Static cname entries. Each tuple should
-            % contain the name (alias, realtive to onezone domain) and domain it should point to.
+            % contain the name (alias, relative to onezone domain) and domain it should point to.
             % Example:
             % {static_cname_records, [
             %     {<<"www">>, <<"onezone.org">>}
