VFS-4029 Implement responding to Let's Encrypt http challenge

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -207,6 +207,9 @@
         %% Must begin with slash
         {rest_api_prefix, "/api/v3/onezone"},
 
+        {letsencrypt_challenge_api_prefix, "/.well-known/acme-challenge"},
+        {letsencrypt_challenge_static_root, "/tmp/oz_worker/http/.well-known/acme-challenge/"},
+
         %% ===================================================================
         %% Authentication and authorization
         %% ===================================================================
