VFS-4623 Add defaults to dns config envs

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -348,7 +348,7 @@
         {dns_ns_ttl, 120},
         {dns_soa_ttl, 120},
         {dns_txt_ttl, 120},
-        {dns_mx_ttl, 120}
+        {dns_mx_ttl, 120},
 
         %% ===================================================================
         %% Space management config
