VFS-4623 Generate SOA admin from zone domain

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -330,8 +330,10 @@
         {dns_ns_min_entries, 2},
 
         %% SOA record parameters
-        % Nameserver admin mailbox
-        {dns_soa_admin_mailbox, "dns-admin.onedata.org"},
+        % Override line below to set custom Admin Email for SOA record.
+        % Default is admin.ZoneDomain
+        %{dns_soa_admin_mailbox, "dns-admin.onedata.org"},
+
         % This value must be incremented on every update of this config file
         {dns_soa_serial, 2017090401},
         % Time interval before the zone should be refreshed
