--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -67,13 +67,28 @@
     ]},
 
     %% cluster_worker config
+
+    %% cluster_worker config
     {cluster_worker, [
 
-        %% External IP of this node - used by DNS
+        % Exometer settings
+        {exometer_lager_reporter, false},
+        {exometer_data_points_number, 100},
+
+        %% External IP of this node - used by DNS and for inter-provider communication
         %% can be set to a tuple or string, for example:
         %% {external_ip, {10,0,0,1}}, or:
         %% {external_ip, "10.0.0.1"},
         {external_ip, undefined},
+
+        %% ===================================================================
+        %% Garbage collection
+        %% ===================================================================
+
+        % Should couchbase pool force garbage collection (options: on, off)
+        {couchbase_pool_gc, off},
+        % Should tp force garbage collection (options: on, off)
+        {tp_gc, off},
 
         %% ===================================================================
         %% PLUGINS
@@ -83,6 +98,84 @@
         {datastore_config_plugin, datastore_config_plugin},
         {node_manager_plugin, node_manager_plugin},
 
+        % Number of tp subtrees
+        % (tree of tp_servers is divided into several subtrees)
+        {tp_subtrees_number, 20},
+        % Enable handling of link and doc calls in single tp proc
+        {aggregate_tp, true},
+        % Size of tp key space (0 - unlimited)
+        {tp_space_size, 2000},
+
+        {datastore_cache_size, [
+            {memory, 50000},
+            {disc, 50000}
+        ]},
+        %% Maps to an 'order' parameter of a bp_tree library
+        {datastore_links_tree_order, 128},
+
+        {couchbase_durability_interval, 500},
+        {couchbase_pool_size, [
+            {'_', [
+                {read, 5},
+                {write, 20},
+                {changes, 3}
+            ]}
+        ]},
+        {couchbase_pool_batch_size, 1000},
+        {couchbase_pool_max_batch_size, 2000},
+        {couchbase_pool_min_batch_size, 250},
+
+        % Throttlers configuration
+        % % Each parameter has 3 config values:
+        % - expected - expected value of parameter
+        %       (no throttling for lower values),
+        % - limit - requests are blocked when limit is reached,
+        % - strength (higher strength results in higher delay when
+        %       expected value is exceeded).
+        % There are 6 parameters:
+        % - tp_proc - max number of tp processes in tp subtree,
+        % - db_queue_max - max number of documents in db queue,
+        % - flush_queue - number of documents in couchbase disk write queue,
+        % - db_queue_sum - sum of numbers of documents in all db queue +
+        %       number of documents in couchbase disk write queue +
+        %       number of documents waiting to be flushed in tp processes,
+        % - tp_size - number of documents waiting to be flushed in tp processes,
+        % - memory - memory usage in percent.
+        {throttling_config, [
+            {import, [
+                {base_time_ms, 40960},
+                {strength, 50},
+                {db_queue_max_expected, 4000},
+                {tp_size_sum_expected, 30000}
+            ]},
+            {default, [
+                {base_time_ms, 40960},
+                {strength, 20},
+                {tp_param_strength, 1},
+                {db_max_param_strength, 1},
+                {flush_queue_param_strength, 1},
+                {db_sum_param_strength, 0},
+                {tp_size_sum_param_strength, 1},
+                {mem_param_strength, 0},
+                {tp_proc_expected, 20000},
+                {tp_proc_limit, 40000},
+                {db_queue_max_expected, 8000},
+                {db_queue_max_limit, 20000},
+                {db_flush_queue_expected, 200000},
+                {db_flush_queue_limit, 500000},
+                {db_queue_sum_expected, 40000},
+                {db_queue_sum_limit, 100000},
+                {tp_size_sum_expected, 500000},
+                {tp_size_sum_limit, 1000000},
+                {memory_expected, 90},
+                {memory_limit, 95}
+            ]}
+        ]},
+
+        %% Number of tp processes to reduce tp process idle time
+        {throttling_reduce_idle_time_memory_proc_number, 2000},
+        {throttling_min_idle_time_memory_proc_number, 10000},
+
         %% ===================================================================
         %% Logs
         %% ===================================================================
@@ -91,10 +184,33 @@
         {throttling_log_file, "{{platform_log_dir}}/throttling_monitoring.log"},
 
         %% ===================================================================
-        %% Exometer
+        %% Graphite config
         %% ===================================================================
 
-        {counter_name_prefixes, [comp, oz_worker]}
+        {counter_name_prefixes, [comp, op_worker]},
+
+        %% Should graphite reporter be active and namespaces used
+        {integrate_with_graphite, false},
+        %% address of graphite db
+        {graphite_host, "172.17.0.2"},
+        %% graphite port
+        {graphite_port, 2003},
+        %% api key for graphite
+        {graphite_api_key, <<"example_key">>},
+        %% graphite metrics prefix
+        {graphite_prefix, <<"onedata">>},
+        %% graphite connection timeout
+        {graphite_connect_timeout, 5000},
+
+        %% ===================================================================
+        %% ls config
+        %% ===================================================================
+
+        %% Should cache fold link token be cached by cache writer
+        %% Warning: other possibility is use cache_list_dir_token flag - do not use both
+        {cache_fold_token, true},
+        %% Time of fold link token caching by cache writer
+        {fold_cache_timeout, 30000}
     ]},
 
     %% oz_worker config
