VFS-4614 Rename custom_static_root to static_root_override

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -213,12 +213,12 @@
         {session_ttl, 3600},
 
         %% Directory where static files of default, embedded GUI are kept.
-        %% Used when gui_custom_static_root is non-existent or empty.
+        %% Used when gui_static_root_override is non-existent or empty.
         {gui_default_static_root, "{{platform_data_dir}}/gui_static"},
         %% Directory where onezone tries to find static files of a custom GUI.
         %% If the directory is not empty, it will serve the static files
         %% from it. If not, it will fall back to default, embedded GUI.
-        {gui_custom_static_root, "/var/www/html/oz_worker"},
+        {gui_static_root_override, "/var/www/html/oz_worker"},
 
         %% Timeout after which to invalidate
         %% basic auth cache record for given user
