VFS-4614 Universal auth.config for OIDC/SAML Identity Providers

--- a/rel/files/auth.config
+++ b/rel/files/auth.config
@@ -1,95 +1,28 @@
-%% EXAMPLE auth.config - it is unusable without app IDs and secrets filled out.
+%% Default auth.config file, only onepanelAuth login is enabled. Please refer
+%% to ./template.auth.config or Onedata documentation (https://onedata.org)
+%% for information how to fill out this config.
 
-%% List of supported auth providers and their config.
-[
-    % Currently Basic Auth (login/password) has no configuration options.
-    % Just leave the tuple below to enable or remove it to disable Basic Auth.
-    {basicAuth, []}
+#{
+    version => 2,
 
-    % Currently other authentication options are disabled by default, because
-    % they require cumbersome configuration per each OpenID provider.
+    onepanelAuthConfig => #{
+        enabled => true
+    },
 
-%%    {google, [
-%%        % Standard config
-%%        {auth_module, auth_google},
-%%        {app_id, <<"app id">>},
-%%        {app_secret, <<"app secret">>},
-%%        % Provider specific config
-%%        {xrds_endpoint,
-%%            <<"https://accounts.google.com/.well-known/openid-configuration">>}
-%%
-%%    ]},
-%%
-%%    {facebook, [
-%%        % Standard config
-%%        {auth_module, auth_facebook},
-%%        {app_id, <<"app id">>},
-%%        {app_secret, <<"app secret">>},
-%%        % Provider specific config
-%%        {authorize_endpoint,
-%%            <<"https://www.facebook.com/dialog/oauth">>},
-%%        {access_token_endpoint,
-%%            <<"https://graph.facebook.com/oauth/access_token">>},
-%%        {user_info_endpoint,
-%%            <<"https://graph.facebook.com/me">>}
-%%    ]},
-%%
-%%    {github, [
-%%        % Standard config
-%%        {auth_module, auth_github},
-%%        {app_id, <<"app id">>},
-%%        {app_secret, <<"app secret">>},
-%%        % Provider specific config
-%%        {authorize_endpoint,
-%%            <<"https://github.com/login/oauth/authorize">>},
-%%        {access_token_endpoint,
-%%            <<"https://github.com/login/oauth/access_token">>},
-%%        {user_info_endpoint,
-%%            <<"https://api.github.com/user">>},
-%%        {user_emails_endpoint,
-%%            <<"https://api.github.com/user/emails">>}
-%%    ]},
-%%
-%%    {dropbox, [
-%%        {auth_module, auth_dropbox},
-%%        {app_id, <<"app id">>},
-%%        {app_secret, <<"app secret">>},
-%%        % Provider specific config
-%%        {authorize_endpoint,
-%%            <<"https://www.dropbox.com/1/oauth2/authorize">>},
-%%        {access_token_endpoint,
-%%            <<"https://api.dropbox.com/1/oauth2/token">>},
-%%        {user_info_endpoint,
-%%            <<"https://api.dropbox.com/1/account/info">>}
-%%
-%%    ]},
-%%
-%%    {plgrid, [
-%%        % Standard config
-%%        {auth_module, auth_plgrid},
-%%        % Provider specific config
-%%        {xrds_endpoint,
-%%            <<"https://openid.plgrid.pl/gateway">>},
-%%        {logout_endpoint,
-%%            <<"https://openid.plgrid.pl/logout">>}
-%%    ]},
-%%
-%%    {indigo, [
-%%        {auth_module, auth_indigo},
-%%        {app_id, <<"app id">>},
-%%        {app_secret, <<"app secret">>},
-%%        % Provider specific config
-%%        {xrds_endpoint, <<"https://iam-test.indigo-datacloud.eu/.well-known/openid-configuration">>},
-%%        % Authority delegation config
-%%        {authority_delegation, [
-%%            {enabled, true},
-%%            {token_prefix, <<"indigo:">>}
-%%        ]},
-%%        {group_mapping, [
-%%            {enabled, true},
-%%            {vo_group_id, <<"INDIGO-DataCloud">>},
-%%            % Optional field
-%%            {super_group, undefined}
-%%        ]}
-%%    ]}
-].
+    samlConfig => #{
+        enabled => false
+    },
+
+    openidConfig => #{
+        enabled => false
+    },
+
+    supportedIdps => [
+        {onepanel, #{
+            displayName => "Onepanel account",
+            iconPath => "/assets/images/auth-providers/onepanel.svg",
+            iconBackgroundColor => "#4BD187",
+            protocol => onepanelAuth
+        }}
+    ]
+}.
