VFS-4614 Code refactor, improve coalesce_entitlements_test

--- a/rel/files/template.auth.config
+++ b/rel/files/template.auth.config
@@ -64,7 +64,7 @@
                 % like the following:
                 %       tokenPrefix => "my-idp/"
                 % Exemplary token usage with with such config:
-                % curl -H "X-Auth-Token: my-idp:lkj9s87rf1234SDfh6721hqd7991" ...
+                % curl -H "X-Auth-Token: my-idp/lkj9s87rf1234SDfh6721hqd7991" ...
             },
             % Defines how the attributes from OpenID user info should be mapped
             % to Onedata user attributes. Attributes must correspond to existing
