VFS-4925 Added check origin header in ws connection handshake

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -238,6 +238,11 @@
         %% Timeout after which to invalidate
         %% basic auth cache record for given user
         {basic_auth_cache_expiration_timeout, 5000},
+        
+        %% Enables the origin header check during WebSocket connection 
+        %% establishment, which denies requests coming from unknown domains 
+        %% (security measure against data exfiltration).
+        {check_ws_origin, true},
 
         %% ===================================================================
         %% Graph Sync config
