VFS-4909 Implement test login page for diagnostics

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -194,6 +194,10 @@
 
         % Path to auth.config file
         {auth_config_file, "{{platform_etc_dir}}/auth.config"},
+        % Path to test.auth.config file that can be used to test various IdP
+        % configurations on a production system without interfering with the
+        % standard login page (the test login page is under /#/test/login).
+        {test_auth_config_file, "{{platform_etc_dir}}/test.auth.config"},
         % Path to IdPs custom plugins directory
         {auth_plugins_dir, "{{platform_etc_dir}}/auth_plugins"},
         % How long should IdPs config file be cached
