VFS-4909 Add support for registering PID handles

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -134,7 +134,7 @@
         % Custom notification displayed on the login page, typically used for
         % informing about planned downtime, can be empty
         {login_notification, ""},
-        {admin_emails, ["info@onedata.org"]},
+        {admin_emails, ["info@onezone.example.com"]},
 
         %% DB config
         {db_nodes, ['db@127.0.0.1:11211']},
@@ -322,7 +322,7 @@
         %% SOA record parameters
         % Override line below to set custom Admin Email for SOA record.
         % Default is admin.ZoneDomain
-        %{dns_soa_admin_mailbox, "dns-admin.onedata.org"},
+        %{dns_soa_admin_mailbox, "dns-admin.onezone.example.com"},
 
         % This value must be incremented on every update of this config file
         {dns_soa_serial, 2017090401},
