VFS-5133 Make GUI OZ session longer by default

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -222,7 +222,7 @@
         %% ===================================================================
 
         % Session TTL (in seconds)
-        {session_ttl, 3600},
+        {session_ttl, 604800}, % 1 week
 
         %% Directory where static files of default, embedded GUI are kept.
         %% Used when gui_static_root_override is non-existent or empty.
