VFS-5154 Fixed folly dependency in RPM spec

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -41,7 +41,7 @@
     "FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR\n"
     "OTHER DEALINGS IN THE SOFTWARE."}.
 {rpm_requires,
-    "folly"
+    ", folly"
     ", libcouchbase2-libevent"
     ", openssl"}.
 {rpm_build_requires,
