VFS-5154 Clean no_dot_erlang scripts

--- a/rebar.config
+++ b/rebar.config
@@ -60,7 +60,8 @@
     {release, "rm -f _build/*/rel/oz_worker/bin/install_upgrade.escript"},
     {release, "rm -f _build/*/rel/oz_worker/bin/nodetool"},
     {release, "rm -f _build/*/rel/oz_worker/bin/oz_worker-*"},
-    {release, "rm -f _build/*/rel/oz_worker/bin/start_clean.boot"}
+    {release, "rm -f _build/*/rel/oz_worker/bin/start_clean.boot"},
+    {release, "rm -f _build/*/rel/oz_worker/bin/no_dot_erlang.boot"}
 ]}.
 
 %% relx configuration
