VFS-5218 Implement support for offline access to IdPs using access/refresh tokens, rename auth_plugins to plugins

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {erl_first_files, [
     "src/http/rest/translators/rest_translator_behaviour.erl",
     "src/auth/auth_protocol_behaviour.erl",
-    "src/auth/auth_plugin_behaviour.erl",
+    "src/auth/onezone_plugin_behaviour.erl",
     "src/auth/openid_plugin_behaviour.erl",
     "src/auth/entitlement_mapping/entitlement_parser_behaviour.erl",
     "src/auth/attribute_mapping/attribute_mapper_behaviour.erl"
@@ -25,7 +25,7 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "./test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "b13d88ec66"}}},
+    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "cfc7d07f1e"}}},
     {cluster_worker, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref,"c9a5fafb360"}}},
     {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "939176e5a7"}}}},
     {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "54d67c655d65f8"}}},
@@ -137,7 +137,7 @@
         {template, "rel/files/vm.args", "etc/vm.args"},
         {copy, "rel/files/auth.config", "etc/auth.config"},
         {copy, "rel/files/template.auth.config", "etc/template.auth.config"},
-        {copy, "rel/files/auth_plugins", "etc/"},
+        {copy, "rel/files/plugins", "etc/"},
 
         %% Copy cert dirs
         {copy, "rel/files/certs", "etc/"},
