--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -137,6 +137,9 @@
         {login_notification, ""},
         {admin_emails, ["info@onezone.example.com"]},
 
+        % Path to custom plugins directory
+        {plugins_directory, "{{platform_etc_dir}}/plugins"},
+
         %% DB config
         {db_nodes, ['db@127.0.0.1:11211']},
 
@@ -199,14 +202,17 @@
         % configurations on a production system without interfering with the
         % standard login page (the test login page is under /#/test/login).
         {test_auth_config_file, "{{platform_etc_dir}}/test.auth.config"},
-        % Path to IdPs custom plugins directory
-        {auth_plugins_dir, "{{platform_etc_dir}}/auth_plugins"},
         % How long should IdPs config file be cached
         {auth_config_cache_ttl, 60000}, % 1 minute
         % How long should XRDS files be cached (OpenId)
         {openid_xrds_cache_ttl, 3600000}, % 1 hour
         % After this time, login procedure via OIDC/SAML expires (if not completed)
         {state_token_ttl_secs, 300},
+        % How long before expiration Onezone should try to refresh IdP access tokens
+        {idp_access_token_refresh_threshold, 300},
+        % If an IdP does not inform about access token lifespan through the
+        % "expires_in" parameter, this value is assumed (in seconds).
+        {assumed_idp_access_token_lifespan, 3600},
 
         %% Macaroons authorization
         {authorization_macaroon_expiration_seconds, 31536000}, % 1 year
