--- a/rel/files/template.auth.config
+++ b/rel/files/template.auth.config
@@ -66,6 +66,10 @@
                 % Exemplary token usage with with such config:
                 % curl -H "X-Auth-Token: my-idp/lkj9s87rf1234SDfh6721hqd7991" ...
             },
+            % If enabled, Onezone will ask for refresh tokens and store them so
+            % that it is later possible to acquire user's access token issued by
+            % given IdP without him being logged in. Only OIDC IdPs are supported.
+            offlineAccess => true,
             % Defines how the attributes from OpenID user info should be mapped
             % to Onedata user attributes. Attributes must correspond to existing
             % OpenID attributes.
