VFS-4751 Improvements according to the PR
* Add require_token_for_provider_registration env to force use of registration tokens
* Return 404 instead of 400 when service type / cluster id is nonexistent
* Add corresponding tests
* Fix some typos, code style issues and inconsistencies

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -111,6 +111,11 @@
         %%               which can be issued only by a Onezone admin
         {provider_registration_policy, open},
 
+        %% If disabled, registration token optional when registering a provider.
+        %% Enabling this option will make it impossible to register legacy
+        %% providers (up to 18.02.*).
+        {require_token_for_provider_registration, false},
+
         %% Also used as the certificate domain and to provider CRLs.
         {http_domain, "127.0.0.1"},
 
