--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -111,7 +111,7 @@
         %%               which can be issued only by a Onezone admin
         {provider_registration_policy, open},
 
-        %% If disabled, registration token optional when registering a provider.
+        %% If disabled, registration token is optional when registering a provider.
         %% Enabling this option will make it impossible to register legacy
         %% providers (up to 18.02.*).
         {require_token_for_provider_registration, false},
