VFS-5229 Harvester gui upload

--- a/rebar.config
+++ b/rebar.config
@@ -170,7 +170,11 @@
 
         {mkdir, "etc/gui_static/opp"},
         {mkdir, "etc/gui_static/opp/empty"},
-        {copy, "rel/files/empty_service_page.html", "etc/gui_static/opp/empty/index.html"}
+        {copy, "rel/files/empty_service_page.html", "etc/gui_static/opp/empty/index.html"},
+
+        {mkdir, "etc/gui_static/hrv"},
+        {mkdir, "etc/gui_static/hrv/empty"},
+        {copy, "rel/files/empty_service_page.html", "etc/gui_static/hrv/empty/index.html"}
     ]},
 
     {extended_start_script, true}
