VFS-5395 Set Onezone version to 19.02.0-beta1

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -99,7 +99,7 @@
             % introduced. No previous op-worker version can be used with this
             % Onezone, or the groups tab in op-worker GUI will crash.
             "18.02.1",
-            "18.07.0-alpha"
+            "19.02.0-beta1"
         ]},
 
         %% Flag indicating whether to allow subdomain delegation or not.
